...
    <string name="access_password_error">Enter your password.</string>
    <string name="access_password_hide">Hide password</string>
    <string name="access_password_label">Password</string>
    <string name="access_password_show">Show password</string>
    <string name="access_product_label">Operations</string>
    <string name="access_session_restoring_body">We are verifying your access before showing work information.</string>
    <string name="access_session_restoring_title">Checking your session</string>
    <string name="access_sign_in_loading_body">We are verifying your identity.</string>
    <string name="access_sign_in_loading_title">Signing in</string>
    <string name="access_sign_in_support">Use your work identity to continue.</string>
    <string name="access_sign_in_title">Sign in</string>
    <string name="access_submit">Sign in</string>
    <string name="context_back_to_work">Return to current work</string>
    <string name="context_change_support">Your current context stays available until another one is confirmed.</string>
    <string name="context_change_title">Change work context</string>
    <string name="context_current_valid_body">You can return to work in your current context.</string>
    <string name="context_current_valid_title">Other options could not be loaded</string>
...
